# amr_robot

./: README.md
articubot_gpio_driver/: CMakeLists.txt  package.xml  plugin_description.xml  setup.cfg  setup.py
articubot_gpio_driver/articubot_gpio_driver/: motor_controller.py
articubot_gpio_driver/articubot_gpio_driver/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
articubot_gpio_driver/articubot_gpio_driver/log/: latest_build
articubot_gpio_driver/src/: articubot_gpio_hardware.cpp
articubot_one/: CMakeLists.txt
articubot_one/articubot_one/: simple_explorer.py
articubot_one/config/: main.rviz  map.rviz  my_controllers.yaml  nav2_params.yaml
articubot_one/description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  urd.gazebo
articubot_one/launch/: bringup_all.launch.py  camera.launch.py  launch_robot.launch.py  launch_sim.launch.py
articubot_one/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
articubot_one/launch/log/: latest_build
docs/: LAUNCH_GUIDE.md  PROJECT_STRUCTURE.md
my_slam_toolbox/: CMakeLists.txt  package.xml  setup.cfg  setup.py
my_slam_toolbox/launch/: slam_toolbox_launch.py
